--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>groovy-all</artifactId>
 			<version>2.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
